--- a/Style3.css
+++ b/Style3.css
@@ -88,7 +88,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin-top: 20px;
   font-weight: bold;
-  color: black;
+  color: #f5f5dc;
   position: relative;
   top: -20px;
   left: 20px;
