--- a/Style3.css
+++ b/Style3.css
@@ -51,7 +51,7 @@ body {
 }
 .top {
   position: absolute;
-  border-top: 105px solid #9163cb;
+  border-top: 105px solid #c08457;
   border-left: 125px solid transparent;
   border-right: 125px solid transparent;
   height: 0;
