--- a/Style3.css
+++ b/Style3.css
@@ -14,7 +14,7 @@ body {
   position: relative;
   width: 250px;
   height: 200px;
-  background: #6247aa;
+  background: #d3a27f;
 }
 .front {
   position: absolute;
